HTTPSリダイレクトを追加

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#303030">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="「花札 × 対戦 × 音楽」これまでにない新感覚対戦型音楽カードゲーム" />
+    <meta name="description" content="「花札 × 対戦 × 音楽」。音札プロジェクトは、音ゲーの“対戦”の常識を覆す、これまでにない新感覚対戦型音楽カードゲームを制作している学生プロジェクトです。" />
     <meta name="thumbnail" content="./images/thumb.png" />
     <meta name="robots" content="noarchive">
     <script src="jquery.min.js"></script>
