遊び方ページを追加

--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
         </div>
     </section>
 
+    <section data-section-name="whats" class="title-whats">
+        <div class="common-medium">今までの「音ゲー」の対戦の常識を覆す！</div>
+        <div class="common-large">”本格対戦音ゲー”</div>
+        <img src="./images/cut.png" alt="" class="title-cut">
+        <div class="common-medium">リズムに乗って演奏する爽快な音楽ゲームに花札をモチーフにした「音札」によるカードバトルを組み合わせ、相手のじゃまをしたり、ライフを回復したりしながら白熱の演奏バトルを繰り広げることができます！</div>
+        <a href="./play" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin">遊び方説明はこちら！</a>
+        <a class="scroll" onclick="$.scrollify.next()"></a>
+    </section>
+
     <section data-section-name="overview">
         <div id="overview-text">
             <div class="common-medium">2019年7月20日、第1回</div>
@@ -237,6 +246,7 @@
                 <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
             </div>
         </div>
+        <a class="scroll" onclick="$.scrollify.next()"></a>
     </section>
 
     <section data-section-name="pages">
@@ -245,6 +255,7 @@
         <a href="./play" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin" uk-tooltip="遊び方説明です">HOW TO PLAY</a>
         <a href="./music" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin" uk-tooltip="収録楽曲の一覧です">MUSIC LIST</a>
         <a href="./char" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin" uk-tooltip="キャラクターの紹介です">CHARACTER</a>
+        <a class="scroll" onclick="$.scrollify.next()"></a>
     </section>
 
     <section data-section-name="links">
