スタイル修正

--- a/play.html
+++ b/play.html
@@ -340,7 +340,7 @@
                 「月」ごとにカードの特徴や属性の傾向がだいたい決まってるよ。
             </p>
             <p class="common-medium">
-                最後のターンが終了すると、場に出さずに最後に手札に残った札(最大5枚)で<strong>役判定</strong>が行われます。<br>
+                最後のターンが終了すると、場に出さずに最後に手札に残った札で<strong>役判定</strong>が行われます。<br>
                 役によって一定のスコアが加算され、この時点でのスコアで勝敗が決定します。
             </p>
             <p class="charcomment">
