ロケテ(2)情報の追加／Twitterアイコン追加

--- a/char.html
+++ b/char.html
@@ -188,6 +188,9 @@
                 <a class="item" href="./play">遊び方</a>
                 <a class="item" href="./music">収録楽曲</a>
                 <a class="item active" href="./char">キャラ</a>
+                <span class="u-pull-right">
+                    <a href="https://twitter.com/otofuda" class="fab fa-twitter nav-right" target="_blank"></a>
+                </span>
             </div>
         </div>
     </nav>
