--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
                 <a class="item" href="./play">遊び方</a>
                 <a class="item" href="./music">収録楽曲</a>
                 <a class="item" href="./char">キャラ</a>
+                <span class="u-pull-right">
+                    <a href="https://twitter.com/otofuda" class="fab fa-twitter nav-right" target="_blank"></a>
+                </span>
             </div>
         </div>
     </nav>
@@ -213,13 +216,40 @@
         <div class="common-medium">今までの「音ゲー」の対戦の常識を覆す！</div>
         <div class="common-large">”本格対戦音ゲー”</div>
         <img src="./images/cut.png" alt="" class="title-cut">
-        <div class="common-medium">リズムに乗って演奏する爽快な音楽ゲームに花札をモチーフにした「音札」によるカードバトルを組み合わせ、相手のじゃまをしたり、ライフを回復したりしながら白熱の演奏バトルを繰り広げることができます！</div>
+        <div class="common-medium">リズムに乗って演奏する爽快な<strong>音楽ゲーム</strong>に、花札をモチーフにした<strong>「音札」</strong>によるカードバトルを組み合わせ、相手のじゃまをしたり、ライフを回復したりしながら白熱の演奏バトルを繰り広げることができます！</div>
         <a class="scroll" onclick="$.scrollify.next()"></a>
     </section>
 
     <section data-section-name="overview">
         <div id="overview-text">
-            <div class="common-medium">2019年7月20日、第1回</div>
+            <div class="common-medium">2019年12月8日</div>
+            <div class="common-large">第2回ロケテスト</div>
+            <div class="common-medium">＆カード登録会を開催しました。</div>
+            <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
+                uk-slideshow="animation: push; max-height: 400">
+                <ul class="uk-slideshow-items">
+                    <li>
+                        <img src="./images/location11.jpg" alt="" uk-cover>
+                    </li>
+                    <li>
+                        <img src="images/location12.jpg" alt="" uk-cover>
+                    </li>
+                    <li>
+                        <img src="images/location13.jpg" alt="" uk-cover>
+                    </li>
+                    <li>
+                        <img src="images/location14.jpg" alt="" uk-cover>
+                    </li>
+                </ul>
+                <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+                    uk-slideshow-item="previous"></a>
+                <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+                    uk-slideshow-item="next"></a>
+                <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
+            </div>
+
+
+            <div class="common-medium uk-margin-xlarge-top">2019年7月20日、第1回</div>
             <div class="common-large">先行ロケテスト</div>
             <div class="common-medium">を開催しました。<a href="https://otofudaproject.tumblr.com/">詳細</a></div>
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
@@ -245,24 +275,19 @@
                 <ul class="uk-slideshow-nav uk-dotnav uk-flex-center uk-margin"></ul>
             </div>
         </div>
-        <a class="scroll" onclick="$.scrollify.next()"></a>
-    </section>
-
-    <section data-section-name="pages">
-        <div class="common-large">もっと音札について知る</div>
+        
+        <div class="common-large uk-margin-xlarge-top">もっと音札について知る</div>
         <p class="common-medium">音札のホームページのコンテンツです。</p>
         <a href="./play" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin" uk-tooltip="遊び方説明です">HOW TO PLAY</a>
         <a href="./music" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin" uk-tooltip="収録楽曲の一覧です">MUSIC LIST</a>
         <a href="./char" class="uk-button uk-button-secondary uk-button-large uk-display-block uk-margin" uk-tooltip="キャラクターの紹介です">CHARACTER</a>
-        <a class="scroll" onclick="$.scrollify.next()"></a>
-    </section>
-
-    <section data-section-name="links">
-        <div class="common-large">私たちについて</div>
+        
+        <div class="common-large uk-margin-xlarge-top">私たちについて</div>
         <p class="common-medium">
             私たちは自作の音楽ゲームを制作している学生のプロジェクトです。<a href="http://www.ne.senshu-u.ac.jp/project2019/" target="_blank" rel="noopener noreferrer">ネットワーク情報学部 PROJECT 2019</a>
         </p>
-        <div class="common-large">最新情報はこちら</div>
+
+        <div class="common-large uk-margin-xlarge-top">最新情報はこちら</div>
         <div class="links-box">
             <a href="https://twitter.com/otofuda" class="links-link fab fa-twitter" uk-tooltip="Twitter"></a>
             <a href="https://otofudaproject.tumblr.com/" class="links-link fab fa-tumblr" uk-tooltip="Tumblr"></a>
