--- a/play.html
+++ b/play.html
@@ -194,6 +194,9 @@
                 <a class="item active" onclick="$.scrollify.move('#title')">遊び方</a>
                 <a class="item" href="./music">収録楽曲</a>
                 <a class="item" href="./char">キャラ</a>
+                <span class="u-pull-right">
+                    <a href="https://twitter.com/otofuda" class="fab fa-twitter nav-right" target="_blank"></a>
+                </span>
             </div>
         </div>
     </nav>
