画像の軽量化

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div id="overview-text">
             <div class="common-medium">2019年12月8日</div>
             <div class="common-large">第2回ロケテスト</div>
-            <div class="common-medium">＆カード登録会を開催しました。</div>
+            <div class="common-medium">＆カード登録会を開催しました。<a href="https://otofudaproject.tumblr.com/post/189466316944/%E7%AC%AC2%E5%9B%9E%E3%83%AD%E3%82%B1%E3%83%86%E3%82%B9%E3%83%88%E9%96%8B%E5%82%AC%E3%81%97%E3%81%BE%E3%81%97%E3%81%9F">詳細</a></div>
             <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
                 uk-slideshow="animation: push; max-height: 400">
                 <ul class="uk-slideshow-items">
@@ -284,7 +284,8 @@
         
         <div class="common-large uk-margin-xlarge-top">私たちについて</div>
         <p class="common-medium">
-            私たちは自作の音楽ゲームを制作している学生のプロジェクトです。<a href="http://www.ne.senshu-u.ac.jp/project2019/" target="_blank" rel="noopener noreferrer">ネットワーク情報学部 PROJECT 2019</a>
+            私たちは自作の音楽ゲームを制作している学生のプロジェクトです。<br>
+            <a href="http://www.ne.senshu-u.ac.jp/project2019/" target="_blank" rel="noopener noreferrer">ネットワーク情報学部 PROJECT 2019</a>
         </p>
 
         <div class="common-large uk-margin-xlarge-top">最新情報はこちら</div>
