playページのレイアウトを改良

--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
             <div class="uk-text-center uk-margin-auto uk-margin-auto-vertical">
                 <h2 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="x: -100,0; viewport: 0.5">自立する筐体</h2>
                 <p class="common-medium" uk-parallax="x: -100,0; viewport: 0.5">「音札」の筐体は自立するための折りたたみ可能な脚を備え、ポータビリティも両立しています。また、NFCリーダーとゲームのプレーに連動して光るLEDがついています。</p>
+                <p class="common-medium" uk-parallax="x: -100,0; viewport: 0.5">音楽ゲームの筐体としては珍しい、木材を使用した温かみのあるデザインです。</p>
             </div>
         </div>
         <div class="uk-height-large uk-background-cover uk-light uk-flex" uk-parallax="opacity: 0,1; y: 0,0; viewport: 0.5" style="background-image: url('./images/c03.png');">
