--- a/music.html
+++ b/music.html
@@ -271,11 +271,20 @@
         <div id="music-detail" uk-modal>
             <div class="uk-modal-dialog uk-modal-body uk-margin-large-top uk-text-center">
                 <button class="uk-modal-close-outside" type="button" uk-close></button>
-                <p>楽曲情報</p>
-                <h5>{{ selectedMusic.name }}</h5>
-                <img :src="selectedMusic.jacket" :alt="selectedMusic.name">
-                <div class="uk-text-small">Artist</div>
-                <div class="uk-text-large">{{ selectedMusic.artist }}</div>
+                <div class="uk-text-meta">楽曲情報</div>
+                <h4 class="music-detail-name">{{ selectedMusic.name }}</h4>
+                <img :src="selectedMusic.jacket" :alt="selectedMusic.name" class="music-detail-jacket">
+                <div class="music-level">
+                    <i class="easy">{{ selectedMusic.level[0] }}</i>
+                    <i class="normal">{{ selectedMusic.level[1] }}</i>
+                    <i class="hard">{{ selectedMusic.level[2] }}</i>
+                </div>
+                <div class="uk-text-meta">Artist</div>
+                <p>{{ selectedMusic.artist }}</p>
+                <div class="uk-text-meta">BPM</div>
+                <p>{{ selectedMusic.bpm }}</p>
+                <div class="uk-text-meta">Notes Designer</div>
+                <p>{{ selectedMusic.notesdesign }}</p>
             </div>
         </div>
     </section>
@@ -302,18 +311,11 @@
                         bpm: '120.0',
                         notesdesign: 'OTOFUDA Sound Team "謎の勢力M"',
                         level: [4, 8, 10]
-                    },
-                    {
-                        id: 3,
-                        jacket: './jacket/.png',
-                        name: 'Sublimation',
-                        artist: 'idady',
-                        bpm: '0.0',
-                        notesdesign: 'マテすぎ vs OTOFUDA Sound Team "謎の勢力M"',
-                        level: [NaN, NaN, NaN]
                     }
                 ],
-                selectedMusic: new Object()
+                selectedMusic: {
+                    level: []
+                }
             },
             methods: {
             }
