--- a/play.html
+++ b/play.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="新感覚対戦型音楽カードゲーム「音札」の遊び方説明です。" />
+    <meta name="thumbnail" content="./images/thumb.png" />
     <meta name="robots" content="noarchive">
     <script src="jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
@@ -20,7 +21,7 @@
         integrity="sha384-n9+6/aSqa9lBidZMRCQHTHKJscPq6NW4pCQBiMmHdUCvPN8ZOg2zJJTkC7WIezWv" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css"
         integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
-    <title>遊び方 | 音札 -おとふだ-</title>
+    <title>遊び方 | 音札 おとふだ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/css/uikit.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.6/js/uikit-icons.min.js"></script>
@@ -37,7 +38,7 @@
         { 
           "@context": "http://schema.org/", 
           "@type": "WebSite",
-          "name": "遊び方 | 音札 -おとふだ-",
+          "name": "遊び方 | 音札 おとふだ",
           "url": "https://www.ne.senshu-u.ac.jp/~proj2019-13/play"
         } 
     </script>
@@ -53,7 +54,7 @@
            "item":
            {
             "@id": "https://www.ne.senshu-u.ac.jp/~proj2019-13",
-            "name": "音札プロジェクト"
+            "name": "音札 おとふだ"
             }
           },
           {
@@ -68,6 +69,14 @@
          ]
         }
     </script>
+    <style>
+        section:not([data-section-name=title]) {
+            padding-top: 100px;
+        }
+        section a{
+            color: #ffffff;
+        }
+    </style>
     <script src="jquery.scrollify.js"></script>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@otofuda" />
@@ -187,17 +196,67 @@
             </g>
         </g>
     </svg>
-    <nav>
-        <div class="row">
-            <div class="columns">
-                <a href="./"><img src="./title.png" alt="音札"></a>
-                <a class="item active" onclick="$.scrollify.move('#title')">遊び方</a>
-                <a class="item" href="./music">収録楽曲</a>
-                <a class="item" href="./char">キャラ</a>
-                <span class="u-pull-right">
-                    <a href="https://twitter.com/otofuda" class="fab fa-twitter nav-right" target="_blank"></a>
-                </span>
-            </div>
+
+    <div class="uk-card uk-card-secondary uk-card-body uk-box-shadow-large" id="sidenav" hidden>
+        <h3>コンテンツ</h3>
+        <ul class="uk-list uk-link-text">
+            <li>
+                <a href="./play">
+                    <div>
+                        HOW TO PLAY
+                        <div class="uk-text-small">音札の遊び方説明です</div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="./music">
+                    <div>
+                        MUSIC
+                        <div class="uk-text-small">収録楽曲の一覧です</div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="./char">
+                    <div>
+                        CHARACTER
+                        <div class="uk-text-small">キャラクター紹介です</div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://otofuda.booth.pm" target="_blank">
+                    <div>
+                        BOOTH<span uk-icon="icon: push" class="uk-text-meta"></span>
+                        <div class="uk-text-small">オリジナルグッズを販売中</div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://j.mp/otfdnet" target="_blank">
+                    <div>
+                        NET<span uk-icon="icon: push" class="uk-text-meta"></span>
+                        <div class="uk-text-small">オンラインサービス「おとふだNET」</div>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+    <nav class="uk-navbar-container" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-navbar-transparent uk-light; top: 100" uk-navbar="mode: click">
+        <div class="uk-navbar-left">
+            <a class="uk-navbar-toggle" uk-navbar-toggle-icon uk-toggle="target: #sidenav; animation: uk-animation-fade"></a>
+        </div>
+
+        <div class="uk-navbar-center">
+            <a class="uk-navbar-item uk-logo logo-white" href="./"><img src="./logo.png" alt="音札"></a>
+            <a class="uk-navbar-item uk-logo logo-black" href="./"><img src="./logo_black.png" alt="音札"></a>
+        </div>
+
+        <div class="uk-navbar-right">
+            <ul class="uk-navbar-nav">
+                <a href="https://twitter.com/otofuda" class="uk-icon-button uk-margin-small-right" uk-icon="twitter" target="_blank"></a>
+            </ul>
         </div>
     </nav>
 
@@ -266,6 +325,9 @@
             <p class="common-large">3.楽曲プレー</p>
             <p class="common-medium">
                 曲が始まると、5つのレーンに楽曲に合わせて<strong>ノーツ</strong>が流れてきます。ノーツが手元の判定ラインに重なるタイミングで対応する鍵盤を押せると<strong>スコア</strong>が上昇します。
+            </p>
+            <p class="common-medium">
+                曲全体は「音札ノーツ」で約10区間に区切られていて、1区間の始まりに1枚の音札を場に出すことができます。
             </p>
             <p class="charcomment">
                 <img src="./images/charcomment.png" alt="">
