--- a/char.html
+++ b/char.html
@@ -3,10 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="./ico/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="./ico/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192×192" href="./ico/android-chrome-192x192.png">
-    <link rel="manifest" href="./ico/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
+    <link rel="manifest" href="ico/manifest.json">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#303030">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -215,14 +226,6 @@
                 </a>
             </li>
             <li>
-                <a href="https://otofuda.booth.pm" target="_blank">
-                    <div>
-                        BOOTH<span uk-icon="icon: push" class="uk-text-meta"></span>
-                        <div class="uk-text-small">オリジナルグッズを販売中</div>
-                    </div>
-                </a>
-            </li>
-            <li>
                 <a href="https://j.mp/otfdnet" target="_blank">
                     <div>
                         NET<span uk-icon="icon: push" class="uk-text-meta"></span>
@@ -251,8 +254,24 @@
     </nav>
 
     <section>
-        <h2 class="uk-heading-line uk-text-center"><span>キャラクター紹介</span></h2>
-        <img src="./images/charinfo.png" alt="華音" class="uk-margin-top" uk-img uk-scrollspy="cls: uk-animation-slide-left; repeat: true">
+        <h2 class="uk-heading-line uk-text-center">
+            <span>キャラクター紹介</span>
+        </h2>
+        <p class="common-medium row">
+            「音札」のオリジナルキャラクターです。
+        </p>
+        <div class="char uk-height-large uk-background-cover uk-background-top-right uk-light uk-flex uk-flex-right uk-flex-bottom" uk-parallax="bgy: 0,-100" style="background-image: url('images/char_kanon.png');">
+            <h2>華音</h2>
+            <h3>かのん</h3>
+        </div>
+        <div class="char uk-height-large uk-background-cover uk-background-top-right uk-light uk-flex uk-flex-right uk-flex-bottom" uk-parallax="bgy: -130,0" style="background-image: url('images/char_kadone.png');">
+            <h2>門音</h2>
+            <h3>かどね</h3>
+        </div>
+    </section>
+
+    <section>
+        <a href="./" class="common-medium">トップページへ戻る</a>
     </section>
 </body>
 
